# power-comm-module_esp32

./: .gitignore  .gitmodules  README.md
firmware/power-comm-module/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
firmware/power-comm-module/front/: index.html  script.js
firmware/power-comm-module/main/: CMakeLists.txt  Kconfig.projbuild  i2c_commands.c  i2c_commands.h  main.c  ota.c  rest_server.c
firmware/power-comm-module/main/include/: i2c_commands.h
hardware/PCB/v0.1/: PowerCommModule-B_Cu.dxf  PowerCommModule.kicad_pcb  PowerCommModule.kicad_prl  PowerCommModule.ngc  fp-info-cache  temp-freerouting.dsn
hardware/PCB/v0.1/Connector_Spring_Terminal_Block.pretty/: Connector_Spring_Terminal_Block_2.54mm_5P_KF142R.kicad_mod
hardware/PCB/v0.2/: .gitignore  PowerAndCommModule.kicad_pcb  PowerAndCommModule.kicad_prl  PowerAndCommModule.kicad_pro  PowerAndCommModule.kicad_sch  TODO  fp-lib-table  freerouting.dsn  temp-freerouting.dsn
hardware/PCB/v0.2/FabricationOutput/: AlignmentDrillTest.FlatPrj  PowerAndCommModule-B_Cu.gbr  PowerAndCommModule-B_Mask.gbr  PowerAndCommModule-B_Paste.gbr  PowerAndCommModule-B_Silkscreen.gbr  PowerAndCommModule-Edge_Cuts.gbr  PowerAndCommModule-F_Cu.gbr  (+6 more)
hardware/PowerCommModule/: PowerCommModule-Edge_Cuts.dxf  PowerCommModule.kicad_prl  PowerCommModule.kicad_pro  PowerCommModule.kicad_sch  freerouting.dsn
hardware/PowerCommModule/Connector_Spring_Terminal_Block.pretty/: Connector_Spring_Terminal_Block_5.00mm_2P_KF142V.kicad_mod  Connector_Spring_Terminal_Block_5.00mm_5P_KF142V.kicad_mod
(+20 files in other folders)
